app/assets/stylesheets/dashboard.css.scss
@import "variables_and_utils";

body {
  font-family: 'Lato', sans-serif;
}

h1 {
  padding: 20px;
  margin: 0;
  font-size: 50px;
  font-family: 'Shojumaru', cursive;
  // font-family: 'Eater', cursive;
  // font-family: 'Caesar Dressing', cursive;
  // font-family: 'Butcherman', cursive;
  // font-family: 'Ultra', serif;

  // Recent Errors
  .char16,.char17,.char18,.char19,.char20,.char21,.char22,.char23,.char24,.char25,.char26,.char27,.char28,.char29,.char31 {
    color: #ffffff;
    // generated with http://www.3dcsstext.com/
    text-shadow: 0px 0px 0 rgb(238,238,238),0px 1px 0 rgb(230,230,230),0px 2px 0 rgb(222,222,222),0px 3px 0 rgb(215,215,215),0px 4px 0 rgb(207,207,207),0px 5px 0 rgb(199,199,199),0px 6px 0 rgb(191,191,191),0px 7px 0 rgb(183,183,183), 0px 8px 0 rgb(175,175,175),0px 9px 8px rgba(0,0,0,0.65),0px 9px 1px rgba(0,0,0,0.5),0px 0px 8px rgba(0,0,0,.2);
  }

  // Airbrake
  // Link Journal
  .char1,.char2,.char3,.char4,.char5,.char6,.char8,.char7,.char9,.char10,.char11,.char12,.char13,.char14,.char15,.char31,.char32,.char33,.char34,.char35,.char36,.char37,.char38,.char39,.char40,.char41,.char42,.char43,.char44 {
    color: #d43131;
    // generated with http://www.3dcsstext.com/
    text-shadow: 0px 0px 0 rgb(195,32,32),0px 1px 0 rgb(187,24,24),0px 2px 0 rgb(179,16,16),0px 3px 0 rgb(172,9,9),0px 4px 0 rgb(164,1,1),0px 5px 0 rgb(156,0,0),0px 6px 0 rgb(148,0,0),0px 7px 0 rgb(140,0,0), 0px 8px 0 rgb(132,0,0),0px 9px 8px rgba(0,0,0,0.65),0px 9px 1px rgba(0,0,0,0.5),0px 0px 8px rgba(0,0,0,.2);
  }

  // :
  // (Dv)
  .char30,.char45,.char46,.char47,.char48,.char49,.char50 {
    color: #c9c9c9;
    // generated with http://www.3dcsstext.com/
    text-shadow: 0px 0px 0 rgb(184,184,184),0px 1px 0 rgb(176,176,176),0px 2px 0 rgb(168,168,168),0px 3px 0 rgb(161,161,161),0px 4px 0 rgb(153,153,153),0px 5px 0 rgb(145,145,145),0px 6px 0 rgb(137,137,137),0px 7px 0 rgb(129,129,129), 0px 8px 0 rgb(121,121,121),0px 9px 8px rgba(0,0,0,0.65),0px 9px 1px rgba(0,0,0,0.5),0px 0px 8px rgba(0,0,0,.2);
  }

}

ul {
  padding-left: 0;
  margin: 0;
  -webkit-column-count: 2;
  // Not supported yet:
  //-webkit-column-fill: auto;
}

li {
  list-style: none;
  padding: 10px 20px;
  line-height: 1.5;
  border-top: 2px solid #eee;

  a {
    text-decoration: none;
    color: $dark-gray;
  }

  a:hover {
    color: lighten($dark-gray, 20);
  }

  .row {
    margin-bottom: 3px;
  }

  .row:last-of-type {
    margin-bottom: 0;
  }

  .resolved {
    position: absolute; top: -10000px; left: -10000px;
  }

  .env {
    @extend %badge;
  }

  .count {
    @extend %badge;
  }

  .most_recent {
    color: $medium-gray;
  }

  .msg {
    font-size: 1.15em;
  }

  .action {
    color: lighten($medium-gray, 10);
    min-height: 1em;
  }

  &.env-production .env {
    background: $badge-error-color;
    color: darken($badge-error-color, 60);
  }
  &.env-acceptance .env {
    background: $badge-notice-color;
    color: darken($badge-notice-color, 60);
  }
  &.resolved { opacity: 0.5; }
  &.not-resolved { }

  &.count-one .count {
    background: $badge-success-color;
    color: darken($badge-success-color, 60);
  }
  &.count-two .count {
    background: $badge-notice-color;
    color: darken($badge-notice-color, 60);
  }
  &.count-five .count {
    background: $badge-notice-color;
    color: darken($badge-notice-color, 60);
  }
  &.count-sixteen .count {
    background: $badge-notice-color;
    color: darken($badge-notice-color, 60);
  }
  &.count-sixty-four .count {
    background: $badge-error-color;
    color: darken($badge-error-color, 60);
  }
  &.count-very-many .count {
    background: $badge-error-color;
    color: darken($badge-error-color, 60);
  }

  &.just-now {
    -webkit-animation: blink 2s infinite ease-in-out alternate;
    font-weight: 700;
  }

  &.just-now .most_recent { color: darken($badge-error-color, 60); }
  &.more-than-5-mins .most_recent { color: darken($badge-error-color, 60); }
  &.more-than-30-mins .most_recent { color: darken($badge-error-color, 60); }
  &.more-than-3-hours .most_recent { color: darken($badge-error-color, 60); }
  &.more-than-12-hours .most_recent { color: darken($badge-notice-color, 60); }
  &.more-than-1-day .most_recent { color: darken($badge-notice-color, 60); }
  &.more-than-2-days .most_recent { color: darken($badge-notice-color, 60); }
  &.more-than-a-week .most_recent { color: darken($badge-success-color, 60); }
}

